--- a/Practice10_6/index.html
+++ b/Practice10_6/index.html
@@ -22,7 +22,7 @@
         <div id="list_form" class="container mt-2 mb-3"></div>
         <div id="filter_form" class="container mb-3"></div>
         <div id="list" class="container mt-4"></div>
-        <div id="delete_list" class="container"></div>
+        <div id="delete_list" class="container mb-3"></div>
     </div>
 </body>
 </html>
